--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+
 .debug{
   background-color: rgb(236, 209, 230);
   min-height: 50px;
@@ -11,14 +12,15 @@
 
 }
 
-.ac-container{
-  width: 80%;
-  height: 100%;
-  margin: 0 auto;
-  background-color: brown;
+
+
+header{
+  height: 65px;
+  background-color: #ebebeb;
 }
 
-#nav{
-  height: 65px;
-  background-color: aqua;
+#jambatron{
+  width: 100%;
+  height: 495px;
+  background-color: #004AFF;
 }
