--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,28 @@ header {
 
 #developer {
     width: 100%;
+    height: 400px;
+    background-color: #929396;
+    position: relative;
+}
+
+.item {
+    width: 50%;
     height: 100%;
-    background-color: #F3F5F9;
+    background-color: lawngreen;
+    position: absolute;
+    top: 100%;
+    left: 20%;
+    transform: translate(100% - 20%);
+}
+
+.item .img {
+    max-width: 100%;
+    height: 100%px;
+    background-color: aquamarine;
+}
+
+#businnes {
+    height: 500px;
+    background-color: lawngreen;
 }
