--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,11 @@ header {
 
 .item .img {
     max-width: 100%;
-    height: 100%px;
+    height: 200px;
     background-color: aquamarine;
 }
 
 #businnes {
-    height: 500px;
+    height: 100%;
     background-color: lawngreen;
 }
