--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,8 @@ header {
     height: 100%;
     background-color: lawngreen;
 }
+
+#service {
+    height: 100%;
+    background-color: #004AFF;
+}
