--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,22 @@
         background-color: #ebebeb;
     }
     
+    .header-up {
+        height: 80px;
+        line-height: 80px;
+        position: fixed;
+        z-index: 3;
+    }
+    
+    .header-bottom {
+        min-height: 80px;
+    }
+    
+    img.loghi {
+        width: 220px;
+        background-color: #ebebeb;
+    }
+    
     #jambatron {
         width: 100%;
         height: 495px;
