fissaggio nav-bar

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@
     img.loghi {
         width: 220px;
         background-color: #ebebeb;
+        position: fixed;
+        top: 0;
+        left: 0;
     }
     
     #jambatron {
