--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
         min-height: 50px;
         border: 1px solid black;
     }
+    /* header  */
     
     header {
         height: 65px;
@@ -55,7 +56,7 @@
     #jambatron {
         width: 100%;
         height: 400px;
-        background-color: #004AFF;
+        background-image: url(../img/bg-banner-home.jpg);
     }
     
     #developer {
@@ -79,7 +80,8 @@
         height: 200px;
         position: absolute;
         top: 110%;
-        left: 37%;
+        left: 17%;
+        transform: translate(110% - 17%);
     }
     
     .item .img {
