--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,26 @@
     /* header  */
     
     header {
-        height: 65px;
+        height: 46px;
         background-color: #fff;
         margin-bottom: 20px;
+    }
+    
+    .glyphicon {
+        position: relative;
+        top: 1px;
+        display: inline-block;
+        font-family: "Glyphicons Halflings";
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        color: rgb(46, 82, 241);
+    }
+    
+    .hamburger-menu {
+        font-size: 130%;
     }
     
     .header-up {
@@ -29,7 +46,7 @@
     }
     
     img.loghi {
-        width: 176px;
+        width: 140px;
         position: fixed;
         top: 2%;
         left: 13%;
@@ -63,6 +80,65 @@
         background-image: url(../img/bg-banner-home.jpg);
     }
     
+    .carousel-indicators {
+        position: absolute;
+        bottom: 10px;
+        left: 18%;
+        z-index: 15;
+        width: 60%;
+        padding-left: 0;
+        margin-left: -30%;
+        text-align: center;
+        list-style: none;
+        top: 92%;
+    }
+    
+    .left-carousel-control {
+        position: absolute;
+        top: 36%;
+        bottom: 0;
+        left: -110px;
+        width: 15%;
+        font-size: 20px;
+        color: #fff;
+        text-align: center;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+        background-color: rgba(0, 0, 0, 0);
+        filter: alpha(opacity=50);
+        opacity: .5;
+    }
+    
+    .right-carousel-control {
+        position: absolute;
+        top: 36%;
+        bottom: 0;
+        right: 50%;
+        width: 15%;
+        font-size: 20px;
+        color: #fff;
+        text-align: center;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+        background-color: rgba(0, 0, 0, 0);
+        filter: alpha(opacity=50);
+        opacity: .5;
+    }
+    
+    .bg-bt {
+        background-color: white;
+        color: #929396;
+    }
+    
+    .bg-bt p {
+        display: inline-block;
+    }
+    
+    .fab,
+    .far {
+        font-weight: 400;
+        color: lightgray;
+        border-radius: 50%;
+    }
+    
     #loghi {
         height: 100%;
         background-color: rgb(227 227 227 / 29%);
@@ -72,6 +148,7 @@
     #deploy {
         width: 100%;
         height: 100%;
+        margin-top: 35px;
     }
     
     #developer {
@@ -91,12 +168,12 @@
     }
     
     .item {
-        width: 300px;
-        height: 200px;
+        width: 350px;
+        height: 265px;
         position: absolute;
-        top: 110%;
-        left: 17%;
-        transform: translate(110% - 17%);
+        top: 134%;
+        left: 33%;
+        transform: translate(110% - 33%);
     }
     
     .item .img {
